Fixed stretched header image for Safari

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -113,8 +113,9 @@
 
 #background {
   max-width: 100%;
-  height: auto;
+  max-height: 200px;
   width: auto;
+  /* align-items: flex-start; */
   padding-bottom: 5px;
   content:url("https://res.cloudinary.com/amandaeric/image/upload/f_auto/site-assets/BANNER_DESKTOP_3.png");
 }
